fix join/left event
